# word_puzzle

./: .env.example  README.md  database.py  game_service.py  main.py  pyproject.toml  requirements.txt  routes.py  settings.py
controllers/: auth_controller.py  games_controller.py
dependencies/: auth.py
models/: db.py
notes/: db_create.sql  game_service.py  schemas.py
routers/: routes.py
schemas/: auth.py  games.py
utils/: auth.py
